--- a/src/components/matchbet.scss
+++ b/src/components/matchbet.scss
@@ -21,6 +21,10 @@
     text-align: center;
     padding-top: 2px;
     margin-bottom: 3px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   }
 
   input[type=radio]:checked + label {
