--- a/src/components/playoffbet.scss
+++ b/src/components/playoffbet.scss
@@ -22,6 +22,10 @@
     padding-top: 2px;
     margin-bottom: 3px;
     overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   }
 
   input[type=checkbox]:checked + label {
