--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -134,7 +134,7 @@ body {
     background: url('../images/Sweden.png');
   }
 
-  .CHE {
+  .SUI {
     background: url('../images/Switzerland.png');
   }
 
