--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,7 @@ $lighter-base-color: lighten($base-color, 15%);
 
 $white-background: #FFF;
 
+$white-text: #FFF;
 $black: #000;
 $text-color: lighten($black, 13%);
 
