--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,4 +4,47 @@ header {
   height: 50px;
   font-size: 16px;
   background-color: $darkest-base-color;
+  font-family: Oswald,sans-serif;
+  text-transform: uppercase;
+  font-size: 24px;
+
+  .header-link {
+    color: $white-text;
+    text-decoration: none;
+    padding-right: 10px;
+  }
+
+  .header-link:hover {
+    color: darken($white-text, 20%);
+  }
+
+  .header-link-log {
+    padding-top: 3px;
+    color: $white-text;
+    text-decoration: none;
+    padding-right: 10px;
+    float: right;
+    font-size: 20px;
+  }
+
+  .header-link-log:hover {
+    color: darken($white-text, 20%);
+  }
+
+  .header-logout {
+    padding-top: 6px;
+    color: $white-text;
+    text-decoration: none;
+    padding-right: 10px;
+    float: right;
+    text-transform: uppercase;
+    font-family: Oswald,sans-serif;
+    font-size: 18px;
+    background: none;
+    border: none;
+  }
+
+  .header-logout:hover {
+    color: darken($white-text, 20%);
+  }
 }
