--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,11 @@ h2 {
   margin-top: 0px;
 }
 
+h3 {
+  margin-bottom: 10px;
+  margin-top: 0px;
+}
+
 p {
   margin-bottom: 7px;
   margin-top: 7px;
@@ -56,6 +61,16 @@ ul {
 
 .rules {
   padding: 0 15px 0 15px;
+}
+
+//ON result page
+.result-section {
+  padding-bottom: 15px;
+
+  .playoff-section {
+    font-weight: bold;
+    padding-top: 5px;
+  }
 }
 
 .auth-form {
