--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
 @import "variables";
+@import "tournament";
+@import "matches";
 
 html {
   height: 100%;
@@ -46,6 +48,7 @@ ul {
   max-width: 900px;
   margin: 0 auto;
   padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .centerer-main {
@@ -53,7 +56,7 @@ ul {
   max-width: 900px;
   margin: 0 auto;
   background-color: $white-background;
-  min-height: calc(100% - 70px);
+  min-height: calc(100% - 66px);
   padding-top: 20px;
 }
 
@@ -112,7 +115,7 @@ ul {
 .tournaments {
   padding: 0 15px 0 15px;
 
-  .tournament {
+  .tournament-name {
     padding-bottom: 10px;
   }
 
@@ -124,357 +127,6 @@ ul {
 
   .tournament-link:hover {
     text-decoration: underline;
-  }
-}
-
-
-.tournament {
-  padding: 0 15px 5px 15px;
-
-  a {
-    text-decoration: none;
-    color: $text-color;
-  }
-
-  a:hover {
-    text-decoration: underline;
-  }
-
-  table {
-    border-collapse: collapse;
-    margin-bottom: 25px;
-  }
-
-  thead {
-    background-color: $darker-base-color;
-    color: $white-text;
-    font-size: 16px;
-    font-weight: bold;
-  }
-
-  tr:nth-child(even) {
-    background-color: $unselect-color;
-  }
-
-  td {
-    padding: 5px;
-    text-align: center;
-    width: 110px;
-
-    .match-and-result {
-      width: 80px;
-      display: inline-block;
-    }
-  }
-
-  .name-col {
-    text-align: left;
-    padding-left: 10px;
-    width: 135px;
-  }
-
-  .bet-divider {
-    display: inline-block;
-    width: 15px;
-  }
-
-  .bet-divider2 {
-    display: inline-block;
-    width: 7px;
-  }
-
-  .bet-right {
-    -moz-box-shadow:inset 1px 1px 0px 0px lighten($select-color, 15%);
-    -webkit-box-shadow:inset 1px 1px 0px 0px lighten($select-color, 15%);
-    box-shadow:inset 1px 1px 0px 0px lighten($select-color, 15%);
-    background-color: $select-color;
-    border:1px solid darken($select-color, 15%);
-    display:inline-block;
-    text-align: center;
-    margin: 0 2px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    height: 22px;
-    width: 23px;
-    padding-top: 1px;
-  }
-
-  .bet-wrong {
-    -moz-box-shadow:inset 1px 1px 0px 0px lighten($wrong-color, 15%);
-    -webkit-box-shadow:inset 1px 1px 0px 0px lighten($wrong-color, 15%);
-    box-shadow:inset 1px 1px 0px 0px lighten($wrong-color, 15%);
-    background-color: $wrong-color;
-    border:1px solid darken($wrong-color, 15%);
-    display:inline-block;
-    text-align: center;
-    margin: 0 2px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    height: 22px;
-    width: 23px;
-    padding-top: 1px;
-  }
-}
-
-
-.matches {
-  padding: 0 15px 0 15px;
-
-  .match-header {
-    font-size: 16px;
-    font-weight: bold;
-
-    .header-time {
-      display: inline-block;
-    }
-
-    .header-home {
-      display: inline-block;
-      padding-left: 158px;
-    }
-
-    .header-result {
-      display: inline-block;
-      padding-left: 115px;
-    }
-
-    .header-away {
-      display: inline-block;
-      padding-left: 118px;
-    }
-
-    .header-bets {
-      display: inline-block;
-      padding-left: 67px;
-    }
-
-    .header-points {
-      display: inline-block;
-      padding-left: 48px;
-    }
-  }
-
-  .match {
-    height: 28px;
-    font-size: 16px;
-    padding: 10px 0 10px 0;
-
-    .bet-results {
-      padding-left: 20px;
-
-      .bet {
-        -moz-box-shadow:inset 1px 1px 0px 0px lighten($unselect-color, 15%);
-        -webkit-box-shadow:inset 1px 1px 0px 0px lighten($unselect-color, 15%);
-        box-shadow:inset 1px 1px 0px 0px lighten($unselect-color, 15%);
-        background-color: $unselect-color;
-        border: 1px solid darken($unselect-color, 15%);
-        display:inline-block;
-        text-align: center;
-        margin: 0 5px;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        height: 25px;
-        width: 28px;
-        padding-top: 3px;
-      }
-
-      .bet-right {
-        -moz-box-shadow:inset 1px 1px 0px 0px lighten($select-color, 15%);
-        -webkit-box-shadow:inset 1px 1px 0px 0px lighten($select-color, 15%);
-        box-shadow:inset 1px 1px 0px 0px lighten($select-color, 15%);
-        background-color: $select-color;
-        border:1px solid darken($select-color, 15%);
-        display:inline-block;
-        text-align: center;
-        margin: 0 5px;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        height: 25px;
-        width: 28px;
-        padding-top: 3px;
-      }
-
-      .bet-wrong {
-        -moz-box-shadow:inset 1px 1px 0px 0px lighten($wrong-color, 15%);
-        -webkit-box-shadow:inset 1px 1px 0px 0px lighten($wrong-color, 15%);
-        box-shadow:inset 1px 1px 0px 0px lighten($wrong-color, 15%);
-        background-color: $wrong-color;
-        border:1px solid darken($wrong-color, 15%);
-        display:inline-block;
-        text-align: center;
-        margin: 0 5px;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        height: 25px;
-        width: 28px;
-        padding-top: 3px;
-      }
-
-      .points {
-        padding-left: 20px;
-      }
-    }
-
-    .time {
-      width: 170px;
-      display: inline-block;
-      vertical-align: middle;
-    }
-
-    .group {
-      width: 25px;
-      display: inline-block;
-      vertical-align: middle;
-    }
-
-    .home-name {
-      width: 150px;
-      display: inline-block;
-      padding-left: 5px;
-      vertical-align: middle;
-    }
-
-    .home-score {
-      display: inline-block;
-      vertical-align: middle;
-      text-align: right;
-      width: 20px;
-    }
-
-    .divider {
-      vertical-align: middle;
-      display: inline-block;
-    }
-
-    .away-score {
-      display: inline-block;
-      vertical-align: middle;
-      text-align: left;
-      width: 20px;
-    }
-
-    .away-name {
-      width: 150px;
-      display: inline-block;
-      text-align: right;
-      padding-right: 5px;
-      vertical-align: middle;
-    }
-
-    .ALB {
-      background: url('../images/Albania.png');
-    }
-
-    .AUT {
-      background: url('../images/Austria.png');
-    }
-
-    .BEL {
-      background: url('../images/Belgium.png');
-    }
-
-    .CRO {
-      background: url('../images/Croatia.png');
-    }
-
-    .CZE {
-      background: url('../images/Czech Republic.png');
-    }
-
-    .ENG {
-      background: url('../images/England.png');
-    }
-
-    .FRA {
-      background: url('../images/France.png');
-    }
-
-    .GER {
-      background: url('../images/Germany.png');
-    }
-
-    .HUN {
-      background: url('../images/Hungary.png');
-    }
-
-    .ISL {
-      background: url('../images/Iceland.png');
-    }
-
-    .ITA {
-      background: url('../images/Italy.png');
-    }
-
-    .NIR {
-      background: url('../images/Northern Ireland.png');
-    }
-
-    .POL {
-      background: url('../images/Poland.png');
-    }
-
-    .POR {
-      background: url('../images/Portugal.png');
-    }
-
-    .IRL {
-      background: url('../images/Republic of Ireland.png');
-    }
-
-    .ROU {
-      background: url('../images/Romania.png');
-    }
-
-    .RUS {
-      background: url('../images/Russia.png');
-    }
-
-    .SVK {
-      background: url('../images/Slovakia.png');
-    }
-
-    .ESP {
-      background: url('../images/Spain.png');
-    }
-
-    .SWE {
-      background: url('../images/Sweden.png');
-    }
-
-    .SUI {
-      background: url('../images/Switzerland.png');
-    }
-
-    .TUR {
-      background: url('../images/Turkey.png');
-    }
-
-    .UKR {
-      background: url('../images/Ukraine.png');
-    }
-
-    .WAL {
-      background: url('../images/Wales.png');
-    }
-
-    .flag {
-      background-size: 42px 28px;
-      background-repeat: no-repeat;
-      width: 42px;
-      height: 28px;
-      display: inline-block;
-      vertical-align: middle;
-    }
   }
 }
 
