Show playoff bets on tournament page

--- a/src/styles/tournament.scss
+++ b/src/styles/tournament.scss
@@ -44,6 +44,11 @@
     width: 135px;
   }
 
+  .playoffbet-col {
+    width: 500px;
+    text-align: left;
+  }
+
   .bet-divider {
     display: inline-block;
     width: 15px;
